--- a/marvelhomes/account/templates/category_property.html
+++ b/marvelhomes/account/templates/category_property.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+    {% load humanize %}
     <head>
         <title>Property Details</title>
         <!-- Required meta tags -->
@@ -17,6 +18,7 @@
             crossorigin="anonymous"
         />
     </head>
+    {% include 'inc/nav.html' %}
     <section class="home"> 
         <div class="container">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
@@ -51,7 +53,7 @@
                        </p>
                        <p class="card-text fw-bold">{{prop.company}}</p>
                        <h3 class="card-text">{{prop.title}}</h3>
-                       <h3 class="card-text">STARTING PRICE AED {{prop.price}}</h3>
+                       <h3 class="card-text">STARTING PRICE AED {{prop.price | intcomma}}</h3>
                      
                        <div class="d-flex justify-content-between button-gap mt-1">
                            <a href="#" class="btn btn-dark">Call</a>
