--- a/marvelhomes/account/templates/news_list.html
+++ b/marvelhomes/account/templates/news_list.html
@@ -20,6 +20,7 @@
 
     <body>
         <section>
+            {% include 'inc/nav.html' %}
             <div class="container my-5">
                 <div class="row">
                     {% if news_list %}
