--- a/marvelhomes/account/templates/place.html
+++ b/marvelhomes/account/templates/place.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+    {% load humanize %}
     <head>
         <title>Place</title>
         <!-- Required meta tags -->
@@ -19,6 +20,7 @@
     </head>
 
     <body>
+        {% include 'inc/nav.html' %}
         <div class="container mt-5">
             <img src="{{place.image.url}}" alt="" class="img-fluid">
             <p>{{place.description}}</p>
@@ -48,7 +50,7 @@
                          </p>
                          <p class="card-text fw-bold">{{prop.company}}</p>
                          <h3 class="card-text">{{prop.title}}</h3>
-                         <h3 class="card-text">STARTING PRICE AED {{prop.price}}</h3>
+                         <h3 class="card-text">STARTING PRICE AED {{prop.price | intcomma}}</h3>
                        
                          <div class="d-flex justify-content-between button-gap mt-1">
                              <a href="#" class="btn btn-dark">Call</a>
