developer details added

--- a/marvelhomes/account/templates/inc/nav.html
+++ b/marvelhomes/account/templates/inc/nav.html
@@ -230,10 +230,10 @@
                                 DEVELOPERS
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownDevelopers">
-                                <li><a class="dropdown-item" href="#">EMAAR</a></li>
-                                <li><a class="dropdown-item" href="#">MERAAS</a></li>
-                                <li><a class="dropdown-item" href="#">DAMAAC</a></li>
-                                <li><a class="dropdown-item" href="#">SEE ALL DEVELOPERS IN DUBAI</a></li>
+                                <li><a class="dropdown-item" href="{% url 'dev' 'emaar' %}">EMAAR</a></li>
+                                <li><a class="dropdown-item" href="{% url 'dev' 'meraas' %}">MERAAS</a></li>
+                                <li><a class="dropdown-item" href="{% url 'dev' 'damaac' %}">DAMAAC</a></li>
+                                <li><a class="dropdown-item" href="{% url "all_developer" %}">SEE ALL DEVELOPERS IN DUBAI</a></li>
                             </ul>
                         </li>
                       
