--- a/marvelhomes/account/templates/mainpage.html
+++ b/marvelhomes/account/templates/mainpage.html
@@ -445,7 +445,7 @@
                                 <h3>Request for Latest Transaction Report in Your Area</h3>
                                 <br>
                                 <br>
-                                <a href="{% url 'listing' %}" class="selbtn btn btn-custom">GET A FREE REPORT</a>
+                                <a href="{% url 'free_report' %}" class="selbtn btn btn-custom">GET A FREE REPORT</a>
                                 <!-- <button class="btn btn-custom" href="{% url 'listing' %}" ng-click="getReport()">Get a Free Report</button> -->
                             </div>
                         </div>
