--- a/marvelhomes/account/templates/inc/nav.html
+++ b/marvelhomes/account/templates/inc/nav.html
@@ -246,7 +246,7 @@
     
                     
                         <li class="nav-item">
-                            <a class="nav-link" href="#">NEWS</a>
+                            <a class="nav-link" href="{% url "news" %}">NEWS</a>
                         </li>
                         {% comment %} <li class="nav-item">
                             <i class="fa-solid fa-user"></i>
