--- a/marvelhomes/account/templates/inc/navbar.html
+++ b/marvelhomes/account/templates/inc/navbar.html
@@ -520,7 +520,7 @@
 
                 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">NEWS</a>
+                        <a class="nav-link" href="{% url "news" %}">NEWS</a>
                     </li>
                     <li class="nav-item">
                         <i class="fa-solid fa-user"></i>
