--- a/marvelhomes/account/templates/developer.html
+++ b/marvelhomes/account/templates/developer.html
@@ -93,6 +93,7 @@
              </div>
 
         </div>
+        {% include "inc/footer.html" %}
         
         <!-- Bootstrap JavaScript Libraries -->
         <script
