--- a/marvelhomes/account/templates/about.html
+++ b/marvelhomes/account/templates/about.html
@@ -271,19 +271,20 @@
                     <!-- allowfullscreen></iframe> -->
             </div>
             <div class="col-md-6">
-              <form id="contactForm">
+              <form method="POST" id="contactForm">
+                {% csrf_token %}
                   <div class="mb-3">
-                      <input type="text" class="form-control" rows="4" placeholder="Name" required>
+                      <input type="text" name='name' class="form-control" rows="4" placeholder="Name" required>
                   </div>
                   <div class="mb-3">
-                      <input type="email" class="form-control" rows="4" placeholder="Email" id="email" required>
+                      <input type="email" name='email' class="form-control" rows="4" placeholder="Email" id="email" required>
                   </div>
                   <div class="mb-3">
-                      <input type="text" class="form-control" rows="4" placeholder="Phone" required>
+                      <input type="text" name='phone' class="form-control" rows="4" placeholder="Phone" required>
                   </div>
                   <!-- Increase the rows from 6 to 8 -->
                   <div class="mb-3">
-                      <textarea class="form-control" rows="6" placeholder="Message" required></textarea>
+                      <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                   </div>
                   <div class="mb-3 form-check">
                       <input type="checkbox" class="form-check-input" id="terms" required>
