--- a/marvelhomes/account/templates/mainpage.html
+++ b/marvelhomes/account/templates/mainpage.html
@@ -350,7 +350,7 @@
                                        </a>
                                         <div class="card-body">
                                             <h5 class="card-title">{{ news.title }}</h5>
-                                            <p class="card-text">{{ news.description | slice:'0:100' }}</p>
+                                            <p class="card-text">{{ news.description | slice:'0:100' }}...</p>
                                             <p>Updated on: {{ news.updated_date }} at {{ news.updated_time }}</p>
                                             <a href="{% url 'detail_news' news.id %}" class="text-decoration-none text-dark"><p class="fw-bold">continue reading</p></a>
                                         </div>
